# Procedural-Animation

./: .gitignore  CMakeLists.txt  README.md
src/: conf.cpp  conf.hpp  main.cpp
src/UI/: Bounds.cpp  Bounds.hpp  Button.cpp  Button.hpp  Flex.cpp  Flex.hpp  KeyboardContext.cpp  KeyboardContext.hpp  MouseContext.cpp  MouseContext.hpp  ProgressBar.cpp  ProgressBar.hpp  ShapePool.cpp  ShapePool.hpp  Slider.cpp  Slider.hpp  StateVariable.cpp  StateVariable.hpp  TextElement.cpp  TextElement.hpp  UIAnimation.hpp  UIElement.cpp  UIElement.hpp  UIElementContext.cpp  UIElementContext.hpp  UIElementState.hpp  UIManager.cpp  UIManager.hpp  WindowElement.cpp  WindowElement.hpp
src/draw/: Color.cpp  Color.hpp  Shapes.cpp  Shapes.hpp
src/engine/: Engine.cpp  Engine.hpp  EngineContext.hpp
src/sim/: Entity.cpp  Entity.hpp  Fish.cpp  Fish.hpp  Lizard.cpp  Lizard.hpp  ManyLegs.cpp  ManyLegs.hpp  Simulation.cpp  Simulation.hpp  Snake.cpp  Snake.hpp  Spider.cpp  Spider.hpp  Spine.cpp  Spine.hpp
src/util/: TimingVariable.cpp  TimingVariable.hpp  util.cpp  util.hpp
